--- a/CART263-TASK-3 -START-B/task-3-css/style.css
+++ b/CART263-TASK-3 -START-B/task-3-css/style.css
@@ -160,6 +160,17 @@ body{
 }
   
 
-
+.TEAM_D_d_circle{
+  font-size:16px;
+  color:white;
+  background-color:rgb(48, 48, 48);
+  border-color:rgb(0, 0, 0);
+  border-width:1px;
+  border-style:solid;
+  /* width:20px;
+  height:20px; */
+  border-radius:20px;
+  position:static;
+}
 
 
