--- a/CART263-TASK-3 -START-B/task-3-css/style.css
+++ b/CART263-TASK-3 -START-B/task-3-css/style.css
@@ -166,11 +166,10 @@ body{
   background-color:rgb(48, 48, 48);
   border-color:rgb(0, 0, 0);
   border-width:1px;
-  border-style:solid;
-  /* width:20px;
-  height:20px; */
+  border-style:none;
   border-radius:20px;
-  position:static;
+  position:absolute;
+  filter:blur(5px);
 }
 
 
